--- a/where-for-dinner-api-gateway/config/workload.yaml
+++ b/where-for-dinner-api-gateway/config/workload.yaml
@@ -12,7 +12,7 @@ spec:
       autoscaling.knative.dev/minScale: "1"
   source:
     git:
-      url: <https URL for your generated project's Git repository>
+      url: https://github.com/Tembhum/where-for-dinner
       ref:
         branch: main
     subPath: where-for-dinner-api-gateway
