--- a/where-for-dinner-availability/config/workload.yaml
+++ b/where-for-dinner-availability/config/workload.yaml
@@ -18,7 +18,7 @@ spec:
       name: rmq-where-for-dinner
   source:
     git:
-      url: <https URL for your generated project's Git repository>
+      url: 
       ref:
         branch: main
     subPath: where-for-dinner-availability
