--- a/where-for-dinner-availability/config/workload.yaml
+++ b/where-for-dinner-availability/config/workload.yaml
@@ -18,7 +18,7 @@ spec:
       name: rmq-where-for-dinner
   source:
     git:
-      url: 
+      url: https://github.com/Tembhum/where-for-dinner
       ref:
         branch: main
     subPath: where-for-dinner-availability
